--- a/index.html
+++ b/index.html
@@ -310,6 +310,13 @@
                     installEvent.prompt().then((result) => {
                         if (result.outcome === 'accepted') {
                             localStorage.setItem('pwaInstalled', 'true');
+                            try {
+                                localStorage.setItem('test', 'test');
+                                localStorage.removeItem('test');
+                                console.log('Доступ к localStorage есть');
+                            } catch (e) {
+                                console.log('Доступ к localStorage отсутствует');
+                            }
                             // Пользователь согласился на установку, скрываем кнопку
                             installButton.style.display = 'none';
                         } else if (result.outcome === 'dismissed') {
