--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
                             localStorage.setItem('pwaInstalled', 'true');
                             try {
                                 localStorage.setItem('test', 'test');
-                                localStorage.removeItem('test');
+                                // localStorage.removeItem('test');
                                 console.log('Доступ к localStorage есть');
                             } catch (e) {
                                 console.log('Доступ к localStorage отсутствует');
