--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             /*Работает на Chrome, Microsoft Edge (версия 76 и выше) */
             window.addEventListener('beforeinstallprompt', (e) => {
                 // Показываем кнопку установки только если условия для установки PWA выполнены
-                installButton.style.display = 'none';
+                // installButton.style.display = 'block';
                 installEvent = e;
             });
 
