--- a/index.html
+++ b/index.html
@@ -304,6 +304,7 @@
             if (localStorage.getItem('pwaInstalled') === 'true') {
                 // Hide the installation button
                 installButton.style.display = 'none';
+                console.log('приложение установлено');
             } else {
                 // Show the installation button
                 installButton.style.display = 'block';
