--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- <base> -->
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>My App PWA</title>
@@ -242,6 +241,17 @@
         const modal = document.getElementById('myModal');
         const modalContent = modal.querySelector('.modal-content');
         const closeButton = document.getElementsByClassName('close')[0];
+
+
+        if ('serviceWorker' in navigator) {
+            window.addEventListener('load', () => {
+                navigator.serviceWorker.register('/service-worker.js').then(registration => {
+                    console.log('Service Worker registered with scope:', registration.scope);
+                }).catch(error => {
+                    console.log('Service Worker registration failed:', error);
+                });
+            });
+        }
 
         function openModal() {
             modal.style.display = 'block';
