--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <meta property="og:image" content="/images/ogImage.jpg">
 <meta property="og:image:width" content="600">
 <meta property="og:image:height" content="315">
-<meta property="og:image" content="images/android-chrome-256x256.png">
+<!-- <meta property="og:image" content="images/android-chrome-256x256.png">
 <meta property="og:image:width" content="256">
-<meta property="og:image:height" content="256">
+<meta property="og:image:height" content="256"> -->
 <meta property="og:title" content="PWA APP">
 <meta property="og:description" content="Testing PWA application">
 <link rel="manifest" href="manifest.json">
