--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <title>My App PWA</title>
 <link rel="stylesheet" href="style.css">
 <script src="script.js" defer></script>
-<meta property="og:image" content="https://natalia-orlova.github.io/btnUp/images/ogImage.jpg">
+<meta property="og:image" content="/btnUp/images/ogImage.jpg">
 <meta property="og:image:width" content="600">
 <meta property="og:image:height" content="315">
 <!-- <meta property="og:image" content="images/android-chrome-256x256.png">
