--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <link rel="stylesheet" href="style.css">
 <script src="script.js" defer></script>
 <meta property="og:image" content="images/android-chrome-256x256.png">
-<meta property="og:image:width" content="600">
-<meta property="og:image:height" content="315">
+<meta property="og:image:width" content="256">
+<meta property="og:image:height" content="256">
 <!-- <meta property="og:image" content="images/ogImage.png">
 <meta property="og:image:width" content="600">
 <meta property="og:image:height" content="315"> -->
@@ -36,6 +36,12 @@
             <span class="close">&times;</span>
         </div>
     </div>
+    <form action="#" id="greetingForm">
+        <input type="text" placeholder="Введите имя" id="lastName">
+        <input type="text" placeholder="Введите фамилию" id="firstName">
+        <input type="submit">
+    </form>
+    <h1 id="greetingMessage"></h1>
     <div class="content">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur esse excepturi est corporis reprehenderit
         ipsam omnis porro. Alias porro sed temporibus molestias quam sunt adipisci, quis ipsa dolorem modi officiis,
